--- a/resume_matcher/requirements_colab.txt
+++ b/resume_matcher/requirements_colab.txt
@@ -13,8 +13,8 @@ cycler==0.11.0
 cymem==2.0.7
 cytoolz==0.12.1
 decorator==5.1.1
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.6.0/en_core_web_md-3.6.0-py3-none-any.whl#sha256=1618fc62e7aedc2b778caa3ea6e9c8280beac3b83fe7b93316cbb9e8f3abe7c5
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.6.0/en_core_web_md-3.6.0-py3-none-any.whl#sha256=1618fc62e7aedc2b778caa3ea6e9c8280beac3b83fe7b93316cbb9e8f[...]
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c2[...]
 Faker==19.1.0
 fastapi==0.101.1
 favicon==0.7.0
@@ -42,10 +42,10 @@ matplotlib==3.7.2
 mdurl==0.1.2
 more-itertools==9.1.0
 murmurhash==1.0.9
-networkx==3.1
+networkx>=3.2
 nltk==3.8.1
 numpy
-packaging==23.1
+packaging>=23.2
 pandas
 pathy==0.10.2
 Pillow==9.5.0
@@ -68,10 +68,10 @@ pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 referencing==0.29.1
 regex==2023.6.3
-requests==2.31.0
+requests==2.32.3
 rich==13.4.2
 rpds-py==0.8.11
-scikit-learn==1.3.0
+scikit-learn>=1.3.2
 scipy==1.11.1
 six==1.16.0
 smart-open==6.3.0
@@ -98,7 +98,7 @@ thinc==8.1.10
 threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
-tornado==6.3.3
+tornado==6.4.2
 tqdm==4.65.0
 typer==0.9.0
 typing_extensions==4.7.1
